--- a/Db.Tests/Db.Tests.csproj
+++ b/Db.Tests/Db.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Db.Sqlite\Db.Sqlite.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
