--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <StartWorkingDirectory>$(MSBuildProjectDirectory)</StartWorkingDirectory>
+    <AssemblyName>Bcan.Domain</AssemblyName>
+    <RootNamespace>Bcan.Domain</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
