Rename namespaces for the test project

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <AssemblyName>Bcan.Tests</AssemblyName>
+    <RootNamespace>Bcan.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
