--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <StartWorkingDirectory>$(MSBuildProjectDirectory)</StartWorkingDirectory>
-    <AssemblyName>Bcan.Domain</AssemblyName>
-    <RootNamespace>Bcan.Domain</RootNamespace>
+    <AssemblyName>Bcan.Efpg.Domain</AssemblyName>
+    <RootNamespace>Bcan.Efpg.Domain</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
